Update bio, skills, education, and now sections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <section id="about" class="container section">
             <div class="section-header">
                 <h2>About</h2>
-                <p>I design digital products that feel simple, clear, and human.</p>
+                <p>
+                    I enjoy exploring and analysing cryptocurrency in my free time.
+                </p>
             </div>
             <div class="about-grid">
                 <div>
@@ -73,20 +75,64 @@
                     <p>
                         When I’m not pushing pixels, I’m usually watching movies,
                         football, or learning from other designers and developers.
+                        I especially enjoy exploring <strong>UI/UX prototyping</strong>,
+                        computer networks, <strong>cybersecurity</strong>, and <strong>cryptography</strong>,
+                        and I love building small websites that are actually useful for
+                        myself and for other people.
                     </p>
                 </div>
                 <div>
                     <h3>Skills & tools</h3>
+                    <h4>Basic skills</h4>
                     <ul class="tag-list">
                         <li>HTML & CSS</li>
                         <li>Responsive Web Design</li>
-                        <li>UI/UX Fundamentals</li>
-                        <li>Figma & Prototyping</li>
-                        <li>Java (CLI apps)</li>
+                        <li>Web Development</li>
+                        <li>UI/UX Prototyping (Figma)</li>
+                        <li>Microsoft Word</li>
+                        <li>Microsoft Excel</li>
+                        <li>Presentation design (PowerPoint)</li>
+                        <li>Data Mining (association, clustering, classification)</li>
+                        <li>Data Analysis</li>
+                    </ul>
+
+                    <h4>Soft skills</h4>
+                    <ul class="tag-list">
+                        <li>Time Management</li>
+                        <li>Financial Management (personal budgeting)</li>
+                        <li>Discipline & on-time delivery</li>
+                        <li>Basic problem solving</li>
+                        <li>Team communication</li>
                     </ul>
                 </div>
             </div>
         </section>
+
+            <!-- EDUCATION -->
+            <section class="section" id="education">
+                <div class="container">
+                    <header class="section-header">
+                        <h2>Education</h2>
+                        <p>Education that shapes how I think and work.</p>
+                    </header>
+
+                    <ul class="edu-list">
+                        <li>
+                            <span class="edu-level">SD Negeri 11 Kota Langsa</span>
+                        </li>
+                        <li>
+                            <span class="edu-level">SMP Negeri 1 Kota Langsa</span>
+                        </li>
+                        <li>
+                            <span class="edu-level">SMA Negeri 1 Kota Langsa</span>
+                        </li>
+                        <li>
+                            <span class="edu-level">Universitas Syiah Kuala</span>
+                            <span class="edu-detail">Informatics &mdash; Class of 2023</span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
 
         <!-- WORK / PROJECTS -->
         <section id="work" class="container section">
@@ -146,6 +192,10 @@
                 <li>Experimenting with cleaner ways to show complex data in UI.</li>
                 <li>Strengthening my Java fundamentals and backend knowledge.</li>
                 <li>Building small weekly UI/UX experiments to improve my eye for detail.</li>
+                <li>Learning cryptography and basic data mining techniques.</li>
+                <li>Exploring deep learning and machine learning fundamentals.</li>
+                <li>Studying computer networks and MikroTik configuration.</li>
+                <li>Getting familiar with computer vision concepts and tools.</li>
             </ul>
         </section>
 
