Refine hero role text

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                     <p class="hero-kicker">Portfolio of Muhammad Ikram Ramadhana Friyan</p>
                     <h1 class="hero-title">I design and build calm, clear digital interfaces.</h1>
                     <p class="hero-subtitle">
-                        Blending <strong>web development</strong> and <strong>UI/UX</strong> to create products that look
-                        sharp but feel effortless to use.
+                        I’m a <strong>Web Developer</strong> and <strong>UI/UX enthusiast</strong> blending
+                        web development and design to create products that look sharp
+                        but feel effortless to use.
                     </p>
                     <div class="hero-actions">
                         <a href="#work" class="btn primary">See my work</a>
