Update current focus badge text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="hero-bg-lines"></div>
             <div class="hero-inner container">
                 <div class="hero-intro">
-                    <p class="hero-kicker">ROLE — Web Developer · Product &amp; UI/UX</p>
+                    <p class="hero-kicker">Portfolio of Muhammad Ikram Ramadhana Friyan</p>
                     <h1 class="hero-title">I design and build calm, clear digital interfaces.</h1>
                     <p class="hero-subtitle">
                         I’m a <strong>Web Developer</strong> and <strong>UI/UX enthusiast</strong> blending
@@ -52,7 +52,7 @@
 
                 <div class="hero-bottom-right">
                     <span class="badge-label">CURRENT FOCUS</span>
-                    <p>Clean interfaces for everyday products</p>
+                    <p>Web Developer · Product &amp; UI/UX · Clean interfaces for everyday products</p>
                 </div>
             </div>
         </section>
